# rl-agent-arcade

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
agents/: __init__.py  baseline_sb3.py  networks.py  ppo_scratch.py
checkpoints/: best_model.pt
demo/: app.py  requirements.txt
docs/: ci.yml.txt
envs/: __init__.py  snake_env.py
evaluation/: evaluate.py  plot_curves.py  record_video.py
notebooks/: analysis.ipynb
tests/: test_snake_env.py
training/: train.py
training/configs/: snake_ppo.yaml
